[gd_scene load_steps=11 format=3 uid="uid://dadbwibnli1nc"]

[ext_resource type="Script" uid="uid://7x2u1077wyg0" path="res://main.gd" id="1_34q4q"]
[ext_resource type="Script" uid="uid://503sn50novga" path="res://player.gd" id="2_l18bc"]
[ext_resource type="Script" uid="uid://du7tu4fh85pno" path="res://player_2.gd" id="3_nvsai"]
[ext_resource type="Script" uid="uid://cpor7vln1wes8" path="res://ball.gd" id="4_0ib4h"]
[ext_resource type="FontFile" uid="uid://bl4s7q4odat1u" path="res://SHPinscher-Regular.otf" id="5_f208b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(21.20213, 121.1202)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(16.15382, 15.884624)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(1163.0773, 63.53846)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(1163.077, 65.4996)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mycd"]
size = Vector2(64.6154, 643.327)

[node name="TwoPlayer" type="Sprite2D"]
position = Vector2(16, 0)
scale = Vector2(0.99047613, 1.0072639)
centered = false
script = ExtResource("1_34q4q")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(-5, 324)
script = ExtResource("2_l18bc")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
rotation = 6.2831855

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10.096153, 0)
scale = Vector2(0.9999998, 1)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="Player2" type="StaticBody2D" parent="."]
position = Vector2(1115, 324)
script = ExtResource("3_nvsai")

[node name="ColorRect" type="ColorRect" parent="Player2"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
rotation = 6.2831855

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2(10.403931, -0.35095215)
scale = Vector2(0.9999998, 1)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="ball" type="CharacterBody2D" parent="."]
position = Vector2(541.1539, 317.6923)
collision_mask = 3
script = ExtResource("4_0ib4h")

[node name="ColorRect" type="ColorRect" parent="ball"]
offset_left = 1.1444092e-05
offset_top = -7.9422812
offset_right = 15.000011
offset_bottom = 7.0577188

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
position = Vector2(8.0769005, 3.0517578e-05)
scale = Vector2(0.9999998, 1)
shape = SubResource("RectangleShape2D_h2yge")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="top" type="CollisionShape2D" parent="Borders"]
position = Vector2(565.3844, -31.769236)
scale = Vector2(0.9999998, 1)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(565.3842, 676.0767)
scale = Vector2(0.9999998, 1)
shape = SubResource("RectangleShape2D_lquwl")

[node name="score Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="score Left"]
position = Vector2(-48.461536, 321.66348)
scale = Vector2(0.9999998, 1)
shape = SubResource("RectangleShape2D_7mycd")

[node name="score right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="score right"]
position = Vector2(1179.2307, 321.66345)
scale = Vector2(0.9999998, 1)
shape = SubResource("RectangleShape2D_7mycd")

[node name="display" type="CanvasLayer" parent="."]

[node name="Player score" type="Label" parent="display"]
offset_left = 376.0
offset_right = 421.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("5_f208b")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPU score" type="Label" parent="display"]
offset_left = 688.0
offset_right = 720.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("5_f208b")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="balltimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 541.1539
offset_top = -7.942308
offset_right = 557.3078
offset_bottom = 643.32697

[connection signal="body_entered" from="score Left" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="score right" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="balltimer" to="." method="_on_ball_timer_timeout"]
